src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Status__c</fullName>
        <description>status of individual</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extended Leave</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Streamline_ID_Contact__c</fullName>
        <description>ID from Streamline (Legacy) System for contacts</description>
        <externalId>true</externalId>
        <label>Streamline ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Level__c</fullName>
        <label>Study Level</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplied_Name_of_Institution__c</fullName>
        <description>populated via automation - copied over from inbound enquiries</description>
        <label>Name of Institution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Under_18__c</fullName>
        <formula>/* Originally set to if(year(today()) - year(Birthdate)&lt;18,true,false)

this is not correct, as doesnt consider the day and month i.e. only under 18 if (todays date - 18 years) is further in past than DOB ie. U18 if (todays date - 18 years) &lt; DOB

*/

DATE(YEAR(TODAY()) - 18, MONTH(TODAY()), DAY(TODAY())) &lt; Birthdate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Under 18</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VTAC_Course_Code__c</fullName>
        <label>VTAC Course Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VTAC_Course_Title__c</fullName>
        <label>VTAC Course Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VTAC_Faculty__c</fullName>
        <label>VTAC Faculty</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VTAC_ID__c</fullName>
        <description>Captures the VTAC ID of the student</description>
        <label>VTAC ID (Student)</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When_will_you_complete_secondary_school__c</fullName>
        <description>Indicates when the student will complete complete secondary school</description>
        <label>When will you complete secondary school?</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>bulkapi_Applicant_Ids__c</fullName>
        <description>maintained by bulk api batch job, these are the applicant ids matched within SMS to this person, concatenated via a &apos;;&apos; separator</description>
        <label>Applicant Ids</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bulkapi_Email_Addresses__c</fullName>
        <description>used to map concatenated email addresses to from bulk api job. These are then processed SF side to remove duplicates stored against contacts</description>
        <label>Inbound Email Addresses</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Person_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Person_ID_unique__c</field>
            <operation>notContain</operation>
            <value>TempId</value>
        </filters>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_Contacts_known_to_Monash_systems</fullName>
        <columns>FULL_NAME</columns>
        <columns>Person_ID__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Person_ID_unique__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Contacts known to Monash systems</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Non_Student</fullName>
        <active>true</active>
        <description>Does not have a Monash identifier, such as Student or Applicant id</description>
        <label>Not known to Monash systems</label>
    </recordTypes>
    <recordTypes>
        <fullName>Student</fullName>
        <active>true</active>
        <description>A contact that has a Monash identifier, like a Student Id or Applicant Id</description>
        <label>Known to Monash systems</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>